temp_err.txt
C:\Users\Kokik\OneDrive\gemini\tech-trend-blog\scripts\produce_from_blueprint.js:127
    const bannedPhrases = ['プロも認めぁE, '専門家が選ぶ', '徹底取杁E, '決定版'];
                                      ^^^^^^

SyntaxError: Unexpected identifier '専門家が選ぶ'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.11.1
